<resources>
    <string name="app_name">ProjectCacl</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="symbol_x">X</string>
    <string name="symbol_X_print">*</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_plus">+</string>
    <string name="symbol_division">/</string>
    <string name="symbol_negative">+/-</string>
    <string name="symbol_dot">.</string>
    <string name="symbol_result">=</string>
    <string name="symbol_sqrt">√</string>
    <string name="symbol_clean">C</string>
    <string name="symbol_delete">del</string>
    <string name="switch_theme">🌗</string>
    <string name="empty_field"> </string>


    <string name="main_display"></string>
    <string name="second_display"></string>
    <string name="day_button">Day</string>
    <string name="night_button">Night</string>
    <string name="return_button">save and return</string>
    <string name="message_plus">Nothing to plus</string>
    <string name="message_minus">Nothing to minus</string>
    <string name="message_multiply">Nothing to multiply</string>
    <string name="message_division">Nothing to Division</string>
    <string name="message_sqrt">You can not get a square root of a negative number</string>
    <string name="message_result">There nothing to result</string>
    <string name="message_delete">Nothing to delete</string>


</resources>