<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_pxhere_com">


    <LinearLayout
        android:id="@+id/number_pad_center"
        style="@style/number_pad_layout"
        android:layout_centerInParent="true">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_4"
            style="@style/buttons_numbers"
            android:text="@string/number_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_5"
            style="@style/buttons_numbers"
            android:text="@string/number_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_6"
            style="@style/buttons_numbers"
            android:text="@string/number_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            style="@style/buttons_operational"
            android:text="@string/symbol_minus" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_pad_bottom"
        style="@style/number_pad_layout"
        android:layout_below="@id/number_pad_center"
        android:layout_centerHorizontal="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_1"
            style="@style/buttons_numbers"
            android:text="@string/number_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_2"
            style="@style/buttons_numbers"
            android:text="@string/number_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_3"
            style="@style/buttons_numbers"
            android:text="@string/number_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            style="@style/buttons_operational"
            android:text="@string/symbol_plus" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_pad_top"
        style="@style/number_pad_layout"
        android:layout_above="@id/number_pad_center"
        android:layout_centerHorizontal="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_7"
            style="@style/buttons_numbers"
            android:text="@string/number_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_8"
            style="@style/buttons_numbers"
            android:text="@string/number_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_9"
            style="@style/buttons_numbers"
            android:text="@string/number_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_x"
            style="@style/buttons_operational"
            android:text="@string/symbol_x" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calc_bottom"
        style="@style/number_pad_layout"
        android:layout_below="@id/number_pad_bottom"
        android:layout_centerHorizontal="true">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_negative"
            style="@style/buttons_numbers"
            android:text="@string/symbol_negative" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_0"
            style="@style/buttons_numbers"
            android:text="@string/number_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dot"
            style="@style/buttons_numbers"
            android:text="@string/symbol_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_result"
            style="@style/buttons_operational"
            android:text="@string/symbol_result" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/operations_panel"
        style="@style/number_pad_layout"
        android:layout_above="@id/number_pad_top"
        android:layout_centerHorizontal="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clean"
            style="@style/buttons_operational"
            android:text="@string/symbol_clean" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_del"
            style="@style/buttons_operational"
            android:text="@string/symbol_delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sqrt"
            style="@style/buttons_operational"
            android:text="@string/symbol_sqrt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_division"
            style="@style/buttons_operational"
            android:text="@string/symbol_division" />

    </LinearLayout>


    <LinearLayout
        style="@style/number_pad_layout.display_layout"
        android:layout_above="@id/display_main_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/second_display"
            style="@style/display.display_second"
            android:background="@color/display"
            android:text="@string/second_display" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/display_main_layout"
        style="@style/number_pad_layout.display_layout"
        android:layout_above="@id/operations_panel"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/negative_status"
            style="@style/display.display_negative"
            android:layout_weight="1"
            android:text="@string/main_display" />

        <TextView
            android:id="@+id/main_display"
            style="@style/display"
            android:layout_weight="10"
            android:text="@string/main_display" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dark_mode_switch"
        style="@style/buttons_numbers.switch_theme"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/switch_theme"
        />



</RelativeLayout>